--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <body>
     <div id="currentPlace" data-bind="with: currentPlace">
-        <h3 data-bind="text: name()"></h3>
+        <h3 data-bind="text: name"></h3>
         <p>Next space station passing:</p>
         <p data-bind="text: ISSdata"></p>
     </div>
