--- a/index.html
+++ b/index.html
@@ -18,12 +18,17 @@
   <body>
     <div id="currentPlace" data-bind="with: currentPlace">
         <h3 data-bind="text: name"></h3>
-        <p>Next space station passing:</p>
+        <p data-bind="if: name!='ISS Current Location'">Next space station passing:</p>
+        <p data-bind="if: name=='ISS Current Location'">Location as at:</p>
         <p data-bind="text: ISSdata"></p>
     </div>
     <div id="map">
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAYzLRZ2pFf9T5nJVX6iafwdPizj2owiNs&callback=viewMap"
         async defer></script>
+    </div>
+    <div id="footer">
+    <h3>Data Source</h3>
+    <p>This page uses the <a href='http://open-notify.org'>http://open-notify.org</a> API. The ISS is tracked by several agencys. Both NORAD and NASA periodically publish data about the station. Open-notify scrapes these sources to provide this API.
     </div>
 
     <script src="node_modules/knockout/build/output/knockout-latest.js"></script>
