--- a/index.html
+++ b/index.html
@@ -4,27 +4,36 @@
     <meta charset="UTF-8">
     <title>ISS Location Map</title>
     <link rel="stylesheet" href="css/custom.css">
+    <link rel="stylesheel" href="node_modules/bootstrap/dist/css/bootstrap.css">
     <meta name="viewport" content="initial-scale=1.0">
 </head>
 
 <body>
 <div id="sidebar">
-    <ul id="places-list" data-bind="foreach: placeList">
+    <h1 id="header">List of places:</h1>
+    <p>Filter: <input data-bind="value: searchPlaces, valueUpdate: 'afterkeydown'" /></p>
+
+    <ul id="places-list" data-bind="foreach: filteredPlaces">
         <li data-bind="text: name, click: $parent.setPlace"></li>
     </ul>
+
 </div>
 
-
-  <body>
     <div id="currentPlace" data-bind="with: currentPlace">
         <h3 data-bind="text: name"></h3>
-        <p data-bind="if: name!='ISS Current Location'">Next space station passing:</p>
-        <p data-bind="if: name=='ISS Current Location'">Location as at:</p>
+        <p data-bind="text: address"></p>
+        <p data-bind="if: name()!='ISS Current Location'">Next space station passing:</p>
+        <p data-bind="if: name()=='ISS Current Location'">Location as at:</p>
         <p data-bind="text: ISSdata"></p>
+    </div>
+    <div id="mapError" data-bind="visible: googleError">
+            <p> Sorry, we're having problems with reaching Google Maps right now. Please try later. </p>
     </div>
     <div id="map">
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAYzLRZ2pFf9T5nJVX6iafwdPizj2owiNs&callback=viewMap"
+        onerror="mapError()"
         async defer></script>
+
     </div>
     <div id="footer">
     <h3>Data Source</h3>
@@ -34,7 +43,7 @@
     <script src="node_modules/knockout/build/output/knockout-latest.js"></script>
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>   
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
 
     <script src="js/app.js"></script>
