--- a/index.html
+++ b/index.html
@@ -1,23 +1,39 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>ISS Location Map</title>
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="css/custom.css">
-    <link rel="stylesheel" href="node_modules/bootstrap/dist/css/bootstrap.css">
-    <meta name="viewport" content="initial-scale=1.0">
 </head>
 
 <body>
-<div id="sidebar">
-    <h1 id="header">List of places:</h1>
-    <p>Filter: <input data-bind="value: searchPlaces, valueUpdate: 'afterkeydown'" /></p>
 
-    <ul id="places-list" data-bind="foreach: filteredPlaces">
-        <li data-bind="text: name, click: $parent.setPlace"></li>
-    </ul>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+      <a class="navbar-brand" href="#">ISSloc</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-</div>
+      <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Places</a>
+            <div class="dropdown-menu" aria-labelledby="dropdown01" data-bind="foreach: filteredPlaces">
+              <a class="dropdown-item" data-bind="text: name, click: $parent.setPlace"></a>
+            </div>
+          </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+          <input id="address" class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+          <button id="submit" class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+      </div>
+    </nav>
 
     <div id="currentPlace" data-bind="with: currentPlace">
         <h3 data-bind="text: name"></h3>
@@ -35,20 +51,19 @@
         async defer></script>
 
     </div>
-    <div id="footer">
-    <h3>Data Source</h3>
-    <p>This page uses the <a href='http://open-notify.org'>http://open-notify.org</a> API. The ISS is tracked by several agencys. Both NORAD and NASA periodically publish data about the station. Open-notify scrapes these sources to provide this API.
-    </div>
 
+    <footer class="footer">
+      <div class="container">
+        <span class="text-muted">This page uses the <a href='http://open-notify.org'>http://open-notify.org</a> API.</span>
+      </div>
+    </footer>
+
+    <script src="js/app.js"></script>
     <script src="node_modules/knockout/build/output/knockout-latest.js"></script>
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
-
-    <script src="js/app.js"></script>
 </body>
-
-
 
 </html>
