--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </ul>
         <form class="form-inline my-2 my-lg-0">
           <input id="address" class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-          <button id="submit" class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          <button id="submit" class="btn btn-outline-success my-2 my-sm-0" type="button">Search</button>
         </form>
       </div>
     </nav>
@@ -46,7 +46,10 @@
     <div id="mapError" data-bind="visible: googleError">
             <p> Sorry, we're having problems with reaching Google Maps right now. Please try later. </p>
     </div>
-
+    <!-- Need to load our app before the google map or callbacks will fail -->
+    <script src="node_modules/knockout/build/output/knockout-latest.js"></script>
+    <script src="js/app.js"></script>
+    <!--  -->
     <div id="map">
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAYzLRZ2pFf9T5nJVX6iafwdPizj2owiNs&callback=viewMap"
         onerror="mapError()"
@@ -59,8 +62,7 @@
       </div>
     </footer>
 
-    <script src="node_modules/knockout/build/output/knockout-latest.js"></script>
-    <script src="js/app.js"></script>
+
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
