--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!doctype html>
 <html lang="en">
 <head>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>ISS Location Map</title>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="css/custom.css">
+
+
 </head>
 
 <body>
 
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-      <a class="navbar-brand" href="#">ISSloc</a>
+      <a class="navbar-brand" href="/">ISSloc</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -19,7 +22,7 @@
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Places</a>
@@ -30,10 +33,13 @@
         </ul>
         <form class="form-inline my-2 my-lg-0">
           <input id="address" class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-          <button id="submit" class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          <button id="submit" class="btn btn-outline-success my-2 my-sm-0" type="button">Search</button>
         </form>
       </div>
     </nav>
+
+    <script src="node_modules/knockout/build/output/knockout-latest.js"></script>
+    <script src="js/app.js"></script>
 
     <div id="currentPlace" data-bind="with: currentPlace">
         <h3 data-bind="text: name"></h3>
@@ -45,21 +51,19 @@
     <div id="mapError" data-bind="visible: googleError">
             <p> Sorry, we're having problems with reaching Google Maps right now. Please try later. </p>
     </div>
+
     <div id="map">
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAYzLRZ2pFf9T5nJVX6iafwdPizj2owiNs&callback=viewMap"
         onerror="mapError()"
         async defer></script>
 
     </div>
-
-    <footer class="footer">
-      <div class="container">
+   
+ <footer class="footer">
+      <div>
         <span class="text-muted">This page uses the <a href='http://open-notify.org'>http://open-notify.org</a> API.</span>
-      </div>
+      </div> 
     </footer>
-
-    <script src="js/app.js"></script>
-    <script src="node_modules/knockout/build/output/knockout-latest.js"></script>
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
